1. create & edit page 2. error page 3. change db

--- a/FYH.Cookbook.Model/FYH.Cookbook.Model.csproj
+++ b/FYH.Cookbook.Model/FYH.Cookbook.Model.csproj
@@ -54,6 +54,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Common\PagingResult.cs" />
+    <Compile Include="CustomException\CbBaseException.cs" />
+    <Compile Include="CustomException\RecipeNotFoundException.cs" />
     <Compile Include="DBEntity\Image.cs" />
     <Compile Include="DBEntity\Ingredient.cs" />
     <Compile Include="DBEntity\Recipe.cs" />
