--- a/FYH.Cookbook.Web/Web.config
+++ b/FYH.Cookbook.Web/Web.config
@@ -37,7 +37,7 @@
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5.1" />
     <httpRuntime targetFramework="4.5.1" />
-    <customErrors mode="Off"/>
+    <customErrors mode="On"/>
   </system.web>
   <system.webServer>
     <modules>
