--- a/FYH.Cookbook.Core/FYH.Cookbook.Core.csproj
+++ b/FYH.Cookbook.Core/FYH.Cookbook.Core.csproj
@@ -72,6 +72,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Caching" />
     <Reference Include="System.Web" />
     <Reference Include="System.Web.Helpers, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.AspNet.WebPages.3.2.3\lib\net45\System.Web.Helpers.dll</HintPath>
@@ -106,11 +107,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Attributes\IgnoreConvertTypeScalarAttribute.cs" />
+    <Compile Include="Caches\CacheExpirationTypeEnum.cs" />
+    <Compile Include="Caches\CacheManager.cs" />
+    <Compile Include="Caches\ICacheManager.cs" />
+    <Compile Include="Caches\MemoryCacheManager.cs" />
     <Compile Include="DB\DBInfo.cs" />
     <Compile Include="DB\MSSqlDBSchema.cs" />
     <Compile Include="Extensions\SessionFactoryObjectHtmlExtension.cs" />
     <Compile Include="Extensions\SpringControllerFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utilities\Singleton.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
