--- a/FYH.Cookbook.Web/packages.config
+++ b/FYH.Cookbook.Web/packages.config
@@ -6,9 +6,11 @@
   <package id="Common.Logging.Core" version="3.3.1" targetFramework="net451" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net451" />
   <package id="EntityFramework.zh-Hans" version="6.1.3" targetFramework="net451" />
+  <package id="FontAwesome" version="4.4.0" targetFramework="net451" />
   <package id="Iesi.Collections" version="4.0.1.4000" targetFramework="net451" />
   <package id="jQuery" version="2.2.0" targetFramework="net451" />
   <package id="jQuery.Validation" version="1.14.0" targetFramework="net451" />
+  <package id="knockoutjs" version="3.4.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net451" />
   <package id="Microsoft.AspNet.Identity.Core.zh-Hans" version="2.2.1" targetFramework="net451" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net451" />
